--- a/src/content/blog/talks/今天安安出门啦.md
+++ b/src/content/blog/talks/今天安安出门啦.md
@@ -6,4 +6,7 @@ date: 2026-01-03
 tag: 安安
 ---
 
-安安去姥姥家后第一次出门，很开心，也很兴奋。
+安安去年11月16号就和妈妈一起去姥姥家了。姥姥家在北方，11月开始温度已经到了零下10度左右，所以一直没敢带出门。今天练完车回来，妻子告诉我他们今天去大老妈家了，这是安安来姥姥家后第一次出门。
+
+回到家和妻子开视频安安很开兴，怎么逗他都会大笑，一副心情很好的样子。
+![alt text](/src/assets/blog/anan-smile.jpg)
